--- a/StormChaserSlides/index.html
+++ b/StormChaserSlides/index.html
@@ -1,1 +1,201 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Viewer with Pagination or Image Display</title>
+  <style>
+    html, body {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background: #f9f9f9;
+      box-sizing: border-box;
+    }
 
+
+    #controls {
+      text-align: center;
+      padding: 10px;
+    }
+
+
+    #viewer-container {
+      height: calc(100% - 50px);
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: auto;
+      background: #fff;
+      border-top: 1px solid #ccc;
+    }
+
+
+    canvas, img {
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      background: #fff;
+    }
+
+
+    #page-info {
+      margin: 0 10px;
+    }
+
+
+    button {
+      padding: 4px 12px;
+      font-size: 16px;
+    }
+  </style>
+
+
+  <script src="https://urldefense.com/v3/__https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js__;!!KaA_j8q37Q!A345I-FiCwny2UlHT2Pm7GOjCswHK7nX9qu_HBV4yGojYhIIQ7U230uu8jutLz_MeVe6b7Nzoe_laD8lOpo1JtRiLP3vuKFWww$ "></script>
+</head>
+<body>
+
+
+  <div id="controls" style="display: none;">
+    <button id="prev-page">Previous</button>
+    <span id="page-info">Page 1 / 1</span>
+    <button id="next-page">Next</button>
+  </div>
+
+
+  <div id="viewer-container">
+    <canvas id="pdf-canvas" style="display: none;"></canvas>
+    <img id="image-viewer" style="display: none;" />
+  </div>
+
+
+  <script>
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
+
+    const fileUrl = getQueryParam('file');
+    if (!fileUrl) {
+      document.body.innerHTML = "<p style='color:red;text-align:center;'>No file specified. Use ?file=yourfile.pdf or .png in the URL.</p>";
+      throw new Error("No file specified");
+    }
+
+
+    const isPDF = fileUrl.toLowerCase().endsWith('.pdf');
+    const canvas = document.getElementById('pdf-canvas');
+    const ctx = canvas.getContext('2d');
+    const imageViewer = document.getElementById('image-viewer');
+    const controls = document.getElementById('controls');
+    const container = document.getElementById('viewer-container');
+
+
+    if (isPDF) {
+      controls.style.display = 'block';
+      canvas.style.display = 'block';
+
+
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://urldefense.com/v3/__https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.worker.min.js__;!!KaA_j8q37Q!A345I-FiCwny2UlHT2Pm7GOjCswHK7nX9qu_HBV4yGojYhIIQ7U230uu8jutLz_MeVe6b7Nzoe_laD8lOpo1JtRiLP2KpZFsUg$ ';
+
+
+      let pdfDoc = null,
+          pageNum = 1,
+          pageRendering = false,
+          pageNumPending = null;
+
+
+      function renderPage(num) {
+        pageRendering = true;
+        pdfDoc.getPage(num).then(function(page) {
+          const containerWidth = container.clientWidth;
+          const containerHeight = container.clientHeight;
+
+
+          let viewport = page.getViewport({ scale: 1 });
+          const widthScale = containerWidth / viewport.width;
+          const heightScale = containerHeight / viewport.height;
+          const scale = Math.min(widthScale, heightScale); // Fit to smaller dimension
+
+
+          const outputScale = window.devicePixelRatio || 1;
+          viewport = page.getViewport({ scale: scale * outputScale });
+
+
+          canvas.width = viewport.width;
+          canvas.height = viewport.height;
+          canvas.style.width = `${viewport.width / outputScale}px`;
+          canvas.style.height = `${viewport.height / outputScale}px`;
+
+
+          const renderContext = {
+            canvasContext: ctx,
+            viewport: viewport
+          };
+
+
+          const renderTask = page.render(renderContext);
+          renderTask.promise.then(() => {
+            pageRendering = false;
+            if (pageNumPending !== null) {
+              renderPage(pageNumPending);
+              pageNumPending = null;
+            }
+          });
+
+
+          document.getElementById('page-info').textContent = 'Page ' + num + ' / ' + pdfDoc.numPages;
+        });
+      }
+
+
+      function queueRenderPage(num) {
+        if (pageRendering) {
+          pageNumPending = num;
+        } else {
+          renderPage(num);
+        }
+      }
+
+
+      function onPrevPage() {
+        if (pageNum <= 1) return;
+        pageNum--;
+        queueRenderPage(pageNum);
+      }
+
+
+      function onNextPage() {
+        if (pageNum >= pdfDoc.numPages) return;
+        pageNum++;
+        queueRenderPage(pageNum);
+      }
+
+
+      document.getElementById('prev-page').addEventListener('click', onPrevPage);
+      document.getElementById('next-page').addEventListener('click', onNextPage);
+
+
+      pdfjsLib.getDocument(fileUrl).promise.then(function(pdfDoc_) {
+        pdfDoc = pdfDoc_;
+        document.getElementById('page-info').textContent = 'Page 1 / ' + pdfDoc.numPages;
+        renderPage(pageNum);
+      });
+
+
+      window.addEventListener('resize', () => {
+        if (pdfDoc) queueRenderPage(pageNum);
+      });
+
+
+    } else {
+      imageViewer.style.display = 'block';
+      imageViewer.src = fileUrl;
+      imageViewer.alt = 'Embedded Image';
+    }
+  </script>
+</body>
+</html>
